--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
 /* Root variables for consistent theming */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 :root {
   /* --color-navbar-bg: linear-gradient(180deg, #0a1627 0%, #151e2d 100%); */
   --color-navbar-bg: #151e2d;
@@ -40,6 +42,7 @@
 
 /* Global styles */
 * {
+  font-family: "Nunito Sans", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
